--- a/wordpress/wp-content/themes/montheme/views/base.twig
+++ b/wordpress/wp-content/themes/montheme/views/base.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Titre par défaut{% endblock %}</title>
-    <link rel="stylesheet" href="chemin/vers/ton/fichier/css.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -14,6 +14,7 @@
     </header>
 
     <main>
+    
         {% block content %}
             <!-- Mettre ici le contenu spécifique à chaque page -->
         {% endblock %}
